chore: JDK21 example - Sequenced collections