@@ -31,7 +31,7 @@ public class DelegationService {
 
         List<NamedHostAndPort> agents = ((TargetImpl) target.get()).agents;
         if (!agents.isEmpty()) {
-            NamedHostAndPort nextAgent = agents.get(0);
+            NamedHostAndPort nextAgent = agents.getFirst();
             // TODO should we do that here ?
             agents.remove(0);
             return new RemoteStepExecutor(delegationClient, nextAgent);
